# dx-blog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE-APACHE  PLAN.md  README.md  TODO.md  docker-compose.postgres.yml  docker-compose.yml  justfile  tailwind.css
.github/workflows/: ci.yml
assets/: dx-components-theme.css  highlight.css  main.css  tailwind.css
docs/: configuration.md  development.md  docker.md  getting-started.md  live-data.md
migrations/: 0001_blog.sql
migrations/postgres/: 20260601000000_blog_init.sql
src/: auth_tokens.rs  embeds.rs  layouts.rs  live.rs  main.rs  mdx.rs  seed.rs
src/components/: mod.rs
src/components/alert_dialog/: component.rs
src/components/avatar/: component.rs  style.css
src/components/breadcrumb/: component.rs  mod.rs
src/components/button/: component.rs
src/components/dropdown_menu/: style.css
src/components/input/: component.rs  style.css
src/components/navbar/: component.rs
src/components/select/: component.rs  style.css
src/components/surface/: component.rs
src/components/text/: component.rs
src/components/textarea/: component.rs  style.css
src/db/: analytics.rs  authors.rs  comments.rs  dialect.rs  feeds.rs  media.rs  mod.rs  posts.rs  reactions.rs  settings.rs  subscribers.rs  taxonomy.rs
src/model/: mod.rs
src/pages/: admin.rs  auth.rs  errors.rs  home.rs  mod.rs  reader.rs  widgets.rs
src/pages/admin/: appearance.rs  comments.rs  dashboard.rs  media.rs  mod.rs  posts.rs  settings.rs  taxonomy.rs  users.rs
src/server/: admin.rs  analytics.rs  authors.rs  comments.rs  feeds.rs  highlight.rs  images.rs  live.rs  live_data.rs  mod.rs  posts.rs  reactions.rs  search.rs  settings.rs  subscribers.rs  taxonomy.rs  tests.rs  tests_postgres.rs
src/server/admin/: comments.rs  media.rs  mod.rs  posts.rs  taxonomy.rs
