[package]
name = "dx-blog"
version = "0.1.0"
authors = ["Tony Bierman <tonybierman@gmail.com>"]
edition = "2021"
description = "A full-featured blog on Dioxus Fullstack (Rust), with auth/authz from arium."
repository = "https://github.com/tonybierman/dx-blog"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
dioxus-web = { version = "0.7.9", features = ["hydrate"], optional = true }
# Timing hooks (use_debounce) — backs the editor's debounced live preview.
dioxus-sdk-time = "0.7"

# (De)serialization for the SSE live-event payloads. Needed on BOTH targets: the
# server serializes `LiveEvent`s onto the stream, the wasm client parses them.
serde_json = "1"

# Auth/authz engine + Dioxus adapter, from the arium workspace on GitHub.
# `default-features = false` so we pick capabilities explicitly. `sql-membership`
# brings `SqlMembershipStore` + `membership_migrator` for per-post ownership.
# Cargo.lock pins the exact commit; bump with `cargo update -p arium-dioxus`.
arium-dioxus = { git = "https://github.com/tonybierman/arium", branch = "main", default-features = false, features = [
    "ui",
    "mail",
    "mfa",
    "oauth-github",
    "ratelimit",
    "tokens",
    "sql-membership",
] }

# Wire types (serde) shared across the client/server boundary — needed on both
# targets, so not gated behind `server`.
serde = { version = "1", features = ["derive"] }

# Structured logging. The macros are used in server-side code (server fns,
# feeds, startup), but the crate compiles on both targets and is already pulled
# in transitively by `dioxus-logger`, which `dioxus::launch`/`dioxus::serve`
# initialize as the global subscriber — so no extra setup is needed.
tracing = "0.1"

# Server-only deps. Enabled by the `server` feature; `dx` does not turn `server`
# on for the wasm client build, so these never compile for wasm. The sqlx driver
# is forwarded weakly by the `sqlite`/`postgres` features below.
axum = { version = "0.8.4", default-features = false, optional = true, features = ["macros"] }
sqlx = { version = "0.8.6", default-features = false, optional = true, features = [
    "macros",
    "migrate",
    "runtime-tokio",
] }
anyhow = { version = "1.0.98", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs"] }        # static /uploads
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"], optional = true }  # markdown render
ammonia = { version = "4", optional = true }                                # HTML sanitize
# Server-only syntax highlighting for fenced code blocks. `default-fancy` swaps
# the C `onig` engine for pure-Rust `fancy-regex` (no C toolchain needed) — it's
# only invoked server-side at render time, so the speed difference is irrelevant.
# Deliberately NOT in the `web` feature: highlighting runs on the server and the
# result is shipped to the client as data, so syntect never bloats the wasm bundle.
syntect = { version = "5", default-features = false, features = ["default-fancy"], optional = true }
slug = { version = "0.1", optional = true }                                 # slug generation
base64 = { version = "0.22", optional = true }                             # media upload decode

# Image rendition pipeline (server-only): on upload, decode the image, resize it
# to the WordPress-style width set, and re-encode. `image` does the decode +
# Lanczos resize; the `webp` crate (libwebp) does the lossy WebP encode `image`'s
# pure-Rust encoder can't. `regex` rewrites inline `<img>`s that point at
# `/uploads/…` into responsive `<picture>` markup at render time. AVIF is behind
# the optional `avif` feature below (heavy build, slow encode) and off by default.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
], optional = true }
webp = { version = "0.3", optional = true }
regex = { version = "1", optional = true }

# Live-reading SSE: in-memory broadcast hub + the axum SSE stream. `tokio`'s
# `sync` feature gives `broadcast`; `tokio-stream`'s `sync` feature gives the
# `BroadcastStream` adapter that turns a receiver into the `Stream` axum's `Sse`
# wants; `futures` provides the `Stream` trait/combinators for the wrapper.
tokio = { version = "1", default-features = false, optional = true, features = ["sync"] }
tokio-stream = { version = "0.1", default-features = false, optional = true, features = ["sync"] }
# Stream trait + combinators: the SSE wrapper on the server, and the EventSource
# consumer (`StreamExt::next`, `stream::select`) on the wasm client — so it's
# enabled by both `server` and `web`.
futures = { version = "0.3", optional = true }

# Live-reading client: the browser EventSource that consumes the SSE stream.
# WASM-only (gated by `web`). The `eventsource` feature exposes the Stream-based
# `eventsource::futures::EventSource` the use_future consumer drains, and pulls
# `web-sys/MessageEvent` itself — so no separate web-sys dep is needed.
gloo-net = { version = "0.6", default-features = false, optional = true, features = ["eventsource"] }
# Consume the EventSource subscription streams via `StreamExt`/`stream::select`.
# Depended on directly (the same crate gloo-net links) so its `Stream` trait is
# the *same* one gloo-net's subscription implements — going through the `futures`
# facade resolves `Stream` to a different path and the bound fails to match.
futures-util = { version = "0.3", default-features = false, optional = true }

[features]
default = ["web", "server", "sqlite"]
web = [
    "dioxus/web",
    "dep:dioxus-web",
    "dep:pulldown-cmark",
    "dep:ammonia",
    "dep:gloo-net",
    "dep:futures-util",
]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:sqlx",
    "dep:anyhow",
    "dep:tower-http",
    "dep:pulldown-cmark",
    "dep:ammonia",
    "dep:syntect",
    "dep:slug",
    "dep:base64",
    "dep:image",
    "dep:webp",
    "dep:regex",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures",
    "arium-dioxus/server",
]

# Also emit AVIF renditions alongside WebP. OFF by default: the pure-Rust AVIF
# encoder (rav1e, via `image/avif-encoder`) is slow to build and slow to run, so
# enabling it makes every upload noticeably heavier. Turn it on deliberately with
# `--features avif`; the `media_variants` schema already records a `format`, so no
# migration is needed when you flip it. Requires the `server` feature too.
avif = ["image?/avif"]

# Backend selection — enable exactly one, matching arium's compile-time choice.
# Weak `sqlx?/sqlite` forwards the driver only when `sqlx` is present (server).
sqlite = ["arium-dioxus/sqlite", "sqlx?/sqlite"]
postgres = ["arium-dioxus/postgres", "sqlx?/postgres"]

# dioxus-web is dragged in only for its ["hydrate"] feature — no call site for
# cargo-machete to find, but dropping it silently disables hydration.
[package.metadata.cargo-machete]
ignored = ["dioxus-web"]

# Tokio's test macro + current-thread runtime drive the async server-side unit
# tests (run with `--no-default-features --features server,sqlite`).
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
